--- a/vm/vagrant/Vagrantfile
+++ b/vm/vagrant/Vagrantfile
@@ -1,80 +1,33 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
 Vagrant.configure("2") do |config|
-    # The most common configuration options are documented and commented below.
-    # For a complete reference, please see the online documentation at
-    # https://docs.vagrantup.com.
+    # for more opts see https://docs.vagrantup.com.
     
     # global ssh config
     config.ssh.forward_agent = true
     config.ssh.forward_x11 = true
 
     ## vagrant-vbguest plugin global config
-    # set for automatic update of guest additions on vm startup
     # config.vbguest.auto_update = false
-
-    # do NOT download the guest additions iso file from a webserver
     # config.vbguest.no_remote = true
 
+    # syntax: host_path, guest_path, [options]
+    config.vm.synced_folder ENV['HOME'], ENV['HOME']
+
+    config.vm.provider "virtualbox" do |vb|
+        # Display the VirtualBox GUI when booting the machine
+        vb.gui = true
+
+        # Customize the amount of memory on the VM:
+        vb.memory = "4096"
+    end
+
     config.vm.define "xenial" do |xenial|
-        # Every Vagrant development environment requires a box. You can search for
-        # boxes at https://vagrantcloud.com/search.
         xenial.vm.box = "ubuntu/xenial64"
-  
-        # Disable automatic box update checking. If you disable this, then
-        # boxes will only be checked for updates when the user runs
-        # `vagrant box outdated`. This is not recommended.
         xenial.vm.box_check_update = false
-  
-        # Create a forwarded port mapping which allows access to a specific port
-        # within the machine from a port on the host machine. In the example below,
-        # accessing "localhost:8080" will access port 80 on the guest machine.
-        # NOTE: This will enable public access to the opened port
-        # xenial.vm.network "forwarded_port", guest: 80, host: 8080
-  
-        # Create a forwarded port mapping which allows access to a specific port
-        # within the machine from a port on the host machine and only allow access
-        # via 127.0.0.1 to disable public access
         xenial.vm.network "forwarded_port", guest: 22, host: 10022, host_ip: "127.0.0.1"
-  
-        # Create a private network, which allows host-only access to the machine
-        # using a specific IP.
-        # xenial.vm.network "private_network", ip: "192.168.33.10"
-  
-        # Create a public network, which generally matched to bridged network.
-        # Bridged networks make the machine appear as another physical device on
-        # your network.
-        # xenial.vm.network "public_network"
-  
-        # Share an additional folder to the guest VM. The first argument is
-        # the path on the host to the actual folder. The second argument is
-        # the path on the guest to mount the folder. And the optional third
-        # argument is a set of non-required options.
-        xenial.vm.synced_folder ENV['HOME'], ENV['HOME']
-  
-        # Provider-specific configuration so you can fine-tune various
-        # backing providers for Vagrant. These expose provider-specific options.
-        # Example for VirtualBox:
-        #
-        xenial.vm.provider "virtualbox" do |vb|
-            # Display the VirtualBox GUI when booting the machine
-            vb.gui = true
-        
-            # Customize the amount of memory on the VM:
-            vb.memory = "4096"
-        end
-        #
-        # View the documentation for the provider you are using for more
-        # information on available options.
-  
-        # Enable provisioning with a shell script. Additional provisioners such as
-        # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
-        # documentation for more information about their specific syntax and use.
+
         xenial.vm.provision "shell", inline: <<-SHELL
             apt-get update
 
@@ -83,50 +36,33 @@ Vagrant.configure("2") do |config|
     end
     
     config.vm.define "linuxbrew" do |linuxbrew|
+        if VAGRANT_COMMAND == "ssh"
+            # run all setup as default box user, but ssh using custom user
+            config.ssh.username = 'linuxbrew'
+        end
+
         linuxbrew.vm.box = "ubuntu/trusty64"
         linuxbrew.vm.box_check_update = false
         linuxbrew.vm.network "forwarded_port", guest: 22, host: 10023, host_ip: "127.0.0.1"
-  
-        # share foleder host <=> guest
-        linuxbrew.vm.synced_folder ENV['HOME'], ENV['HOME']
-  
-        linuxbrew.vm.provider "virtualbox" do |vb|
-            # Display the VirtualBox GUI when booting the machine
-            vb.gui = true
-        
-            # Customize the amount of memory on the VM:
-            vb.memory = "4096"
-        end
-        
+
         linuxbrew.vm.provision "shell", inline: <<-SHELL
             /vagrant/provision/linuxbrew_trusty_pkg_provision.sh
-            /vagrant/provision/linuxbrew_brew_provision.sh
+            /vagrant/provision/linuxbrew_brew_provision.sh vagrant
         SHELL
-
-        linuxbrew.ssh.username = "linuxbrew"
     end
     
     config.vm.define "linuxbrew_xenial" do |linuxbrew_xenial|
+        if VAGRANT_COMMAND == "ssh"
+            config.ssh.username = 'linuxbrew'
+        end
+
         linuxbrew_xenial.vm.box = "ubuntu/xenial64"
         linuxbrew_xenial.vm.box_check_update = false
         linuxbrew_xenial.vm.network "forwarded_port", guest: 22, host: 10024, host_ip: "127.0.0.1"
 
-        # share foleder host <=> guest
-        linuxbrew_xenial.vm.synced_folder ENV['HOME'], ENV['HOME']
-
-        linuxbrew_xenial.vm.provider "virtualbox" do |vb|
-            # Display the VirtualBox GUI when booting the machine
-            vb.gui = true
-
-            # Customize the amount of memory on the VM:
-            vb.memory = "4096"
-        end
-
         linuxbrew_xenial.vm.provision "shell", inline: <<-SHELL
             /vagrant/provision/linuxbrew_xenial_pkg_provision.sh
-            /vagrant/provision/linuxbrew_brew_provision.sh
+            /vagrant/provision/linuxbrew_brew_provision.sh ubuntu
         SHELL
-
-        #linuxbrew.ssh.username = "linuxbrew"
     end
 end
