--- a/vm/vagrant/Vagrantfile
+++ b/vm/vagrant/Vagrantfile
@@ -1,6 +1,8 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+VAGRANT_COMMAND = ARGV[0]
+
 Vagrant.configure("2") do |config|
     # for more opts see https://docs.vagrantup.com.
     
