--- a/vm/vagrant/Vagrantfile
+++ b/vm/vagrant/Vagrantfile
@@ -62,9 +62,12 @@ Vagrant.configure("2") do |config|
         SHELL
     end
     
-    config.vm.define "linuxbrew_xenial" do |linuxbrew_xenial|
+    config.vm.define "linuxbrew_xenial", primary: true do |linuxbrew_xenial|
         if VAGRANT_COMMAND == "ssh"
             config.ssh.username = 'linuxbrew'
+            #config.ssh.username = 'root'
+            #config.ssh.password = 'vagrant'
+            #config.ssh.insert_key = 'true'
         end
 
         linuxbrew_xenial.vm.box = "ubuntu/xenial64"
